[tool.poetry]
name = "asfpy"
version = "0.53"
description='ASF Common Python Methods'
authors = ["ASF Infrastructure <users@infra.apache.org>"]
readme = "README.md"
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3"
]

[tool.poetry.dependencies]
python = ">=3.7,<4"
aiohttp = "^3.10.5"
asyncinotify = "^4.0.9"
bonsai = "^1.5.3"
ezt = "^1.1"
python-ldap = "^3.4.4"
requests = "^2.32.3"
easydict = "^1.13"
pyyaml = "^6.0.2"
cryptography = "^43.0.1"
cffi = "^1.17.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "*"
pylint = "*"

[tool.poetry.group.ldap]
optional = true

[tool.poetry.group.ldap.dependencies]
python-ldap = "*"

[tool.poetry.group.aioldap]
optional = true

[tool.poetry.group.aioldap.dependencies]
bonsai = "*"
