[tool.poetry]
name = "asfpy"
version = "0.56"
description='ASF Common Python Methods'
authors = ["ASF Infrastructure <users@infra.apache.org>"]
readme = "README.md"
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3"
]

[tool.poetry.dependencies]
python = ">=3.9.2,<4"
aiohttp = "^3.10.5"
bonsai = { version = "^1.5.3", optional = true }
ezt = "^1.1"
python-ldap = { version = "^3.4.4", optional = true }
requests = "^2.32.3"
easydict = "^1.13"
pyyaml = "^6.0.2"
cryptography = "^44.0.2"
cffi = "^1.17.1"
watchfiles = "^1.0.0"
passlib = { version = "^1.7.4", optional = true }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "*"
pylint = "*"

[tool.poetry.extras]
ldap = ["python-ldap", "passlib"]
aioldap = ["bonsai", "passlib"]

[tool.pytest.ini_options]
testpaths  = ["test"]
pythonpath = ["asfpy"]
