[project]
name = "asfpy"
version = "0.59"
description = "ASF Common Python Methods"
authors = [{name = "ASF Infrastructure", email = "users@infra.apache.org"}]
readme = "README.md"
requires-python = ">=3.9.2"
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "aiohttp>=3.10.5,<4",
    "cffi>=1.17.1",
    "cryptography>=46.0.5,<47",
    "easydict>=1.13,<2",
    "ezt>=1.1,<2",
    "pyyaml>=6.0.2,<7",
    "requests>=2.32.3,<3",
    "watchfiles>=1.0.0,<2",
]

[project.optional-dependencies]
aioldap = ["bonsai>=1.5.3,<2", "passlib>=1.7.4,<2"]
ldap = ["python-ldap>=3.4.4,<4", "passlib>=1.7.4,<2"]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = ["mypy", "pylint", "pytest"]

[tool.hatch.build.targets.sdist]
exclude = ["test/"]

[tool.pytest.ini_options]
testpaths  = ["test"]
pythonpath = ["asfpy"]
